😊 更新使用示例

--- a/samples/HttpAgent.Samples/HttpAgent.Samples.csproj
+++ b/samples/HttpAgent.Samples/HttpAgent.Samples.csproj
@@ -14,4 +14,8 @@
         <ProjectReference Include="..\..\src\HttpAgent\src\HttpAgent.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\"/>
+    </ItemGroup>
+
 </Project>
