--- a/src/HttpAgent/src/HttpAgent.csproj
+++ b/src/HttpAgent/src/HttpAgent.csproj
@@ -11,8 +11,8 @@
     </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
-        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0-rc.2.24473.5"/>
-        <PackageReference Include="Microsoft.Net.Http.Headers" Version="9.0.0-rc.2.24474.3"/>
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.Net.Http.Headers" Version="9.0.0"/>
     </ItemGroup>
 
 </Project>
