😊 添加 阿里云对象存储 `OSS` 支持

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -28,10 +28,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="$(SolutionDir)..\README.md" Pack="true" PackagePath="\"/>
-        <None Include="$(SolutionDir)..\LICENSE" Pack="true" PackagePath="\"/>
-        <None Include="$(SolutionDir)icon.png" Pack="true" PackagePath="\"/>
-        <None Include="$(SolutionDir)Directory.Build.props" Pack="true" PackagePath="\"/>
+        <None Include="$(ProjectDir)..\..\..\README.md" Pack="true" PackagePath="\"/>
+        <None Include="$(ProjectDir)..\..\..\LICENSE" Pack="true" PackagePath="\"/>
+        <None Include="$(ProjectDir)..\..\icon.png" Pack="true" PackagePath="\"/>
+        <None Include="$(ProjectDir)..\..\Directory.Build.props" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
