--- a/samples/HttpAgent.Samples/HttpAgent.Samples.csproj
+++ b/samples/HttpAgent.Samples/HttpAgent.Samples.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Shapeless" Version="1.0.6"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
     </ItemGroup>
 
