😊 发布 `v1.0.17` 版本，调整默认 `User-Agent` 请求标头设置

--- a/src/HttpAgent/src/HttpAgent.csproj
+++ b/src/HttpAgent/src/HttpAgent.csproj
@@ -15,4 +15,8 @@
         <PackageReference Include="Microsoft.Net.Http.Headers" Version="9.0.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Remove="Core\Extensions\AssemblyExtensions.cs"/>
+    </ItemGroup>
+
 </Project>
