--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,14 +2,14 @@
 
     <PropertyGroup>
         <LangVersion>preview</LangVersion>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <PackageOutputPath>$(SolutionDir)nupkgs</PackageOutputPath>
-        <Version>1.0.18</Version>
+        <Version>1.0.19</Version>
         <PackageVersion>$(Version)</PackageVersion>
         <Authors>百小僧</Authors>
         <Description>HttpAgent 是一个高性能、灵活且易用的开源库，提供了全面的 HTTP 功能支持，包括文件传输、轮询、测试工具、实时通信、请求管理、Media 类型处理、MessagePack 支持等，并具有低资源消耗和高测试覆盖率的特点。</Description>
