😊 发布 `v1.0.21` 版本，新增可配置所有 `HttpClient` 的拓展方法

--- a/samples/HttpAgent.Samples/HttpAgent.Samples.csproj
+++ b/samples/HttpAgent.Samples/HttpAgent.Samples.csproj
@@ -7,8 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Shapeless" Version="1.0.9" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
+        <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.1.0"/>
+        <PackageReference Include="Shapeless" Version="1.0.9"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1"/>
     </ItemGroup>
 
     <ItemGroup>
