--- a/samples/HttpAgent.Samples/appsettings.json
+++ b/samples/HttpAgent.Samples/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Services": {
+    "furion": {
+      "https": [
+        "furion.net",
+        "www.furion.net"
+      ]
+    }
+  }
 }
